# rocket-integrator

./: .gitignore  README.md  helper.py  integrator.py  main.py  matplottest.py  pyproject.toml
cpp/: CMakeLists.txt  README.md
cpp/include/: helper.hpp  integrator.hpp
cpp/src/: main.cpp
portfolio/: porftolio.tex
portfolio/backend/: api.py  bake_demo.py  dev.ps1  generate_landing_json.py  render.yaml  requirements.txt
portfolio/frontend/: deploy_error.txt  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
portfolio/frontend/public/: hover.json  landing.json
portfolio/frontend/public/models/: grid_fin_ass_asm.glb
portfolio/frontend/src/: App.tsx  index.css
portfolio/frontend/src/components/: RippleMesh.tsx
portfolio/frontend/src/pages/: competencesPage.tsx  downloadsPage.tsx  experience.tsx  loisirs.tsx  mainPage.css  mainPage.tsx  rocketDemo.tsx
portfolio/frontend/src/rocket/: live_plots.ts  trajectory_player.ts
python/: netwonmethod.py  pyproject.toml
python/docs/: controller-twitching.md
python/rocket/: __init__.py  dynamics_function.py  helper.py  helper_np.py  integrator.py  main.py  sil_simulation.py  test_lqr.py  test_sil.py  test_tangent_controller.py
python/rocket/config/: vehicle.py
python/rocket/control/: attitude_law.py  lqr_controller.py  lqr_design.py
python/rocket/controllers/: __init__.py  base.py  cas.py  full_state_controller.py  lqr.py
python/rocket/integration/: integrator.py
python/rocket/math/: quaternion.py  tangent_space.py  types.py
python/rocket/plant/: dynamics.py  thrust.py  tvc.py
python/rocket/scenarios/: lqr_sanity_check.py  open_loop.py  sil_hover.py
python/rocket/tests/: test_lqr.py  test_sil.py  test_tangent_controller.py
python/rocket/viz/: animation.py  mesh.py  plots.py  ws_server.py
python/scratch/: compare_freeze.py  compare_weights.py
rendering/: EXPORT_PIPELINE.md  index.html  package-lock.json  package.json
rendering/src/: assembly.config.ts  live_plots.ts  main.ts  rocket.ts  trajectory.ts  trajectory_player.ts
