[project]
name = "rocket-integrator"
version = "1.0.0"
description = "6-DOF rigid-body dynamics simulator using a 4th-order Runge-Kutta integration scheme."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "scipy>=1.12",
    "control>=0.10.2",
    "jax>=0.6.2",
    "websockets>=12.0",
]

[project.scripts]
simulate = "rocket.scenarios.open_loop:main"
simulate-sil = "rocket.scenarios.sil_hover:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rocket"]

[tool.ruff]
line-length = 100
